I fixed the router so that the pages were displayed, made the pop-up window with the product smaller on mobile devices

--- a/src/components/popUpProduct/PopUpProduct.module.scss
+++ b/src/components/popUpProduct/PopUpProduct.module.scss
@@ -65,9 +65,12 @@
         height: 300px;
         border-radius: 16px;
         align-self: baseline;
+       
 
         @media(max-width:510px) {
             min-width: 50px;
+            margin: 0 auto;
+            height: 150px;
         }
 
         img {
@@ -158,11 +161,11 @@
         justify-content: space-between;
 
         @media (max-width:510px) {
-         display: flex;
-         justify-content: space-between;
-         width: 100%;
-         align-items: center;
-        
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            align-items: center;
+
         }
     }
 
